--- a/Project.toml
+++ b/Project.toml
@@ -4,7 +4,25 @@ authors = ["Michael Persico <michael.a.persico@gmail.com>"]
 version = "0.1.0"
 
 [deps]
-Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+BioSequences = "7e6ae17a-c86d-528c-b3b9-7f778a29fe59"
+CodecBzip2 = "523fee87-0ab8-5b00-afb7-3ecf72e48cfd"
+CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
+CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
+CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 PyCall = "438e738f-606a-5dbb-bf0a-cddfbfd45ab0"
-VegaDatasets = "0ae4a718-28b7-58ec-9efb-cded64d6d5b4"
+TranscodingStreams = "3bb67fe8-82b1-5028-8e26-92a6c54297fa"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
+
+[compat]
+BioSequences = "3.1.1"
+CodecBzip2 = "0.7.2"
+CodecXz = "0.7.0"
+CodecZlib = "0.7.0"
+CodecZstd = "0.7.2"
+DataFrames = "1.4.3"
+FASTX = "2.0.0"
+PyCall = "1.94.1"
+TranscodingStreams = "0.9.9"
+VegaLite = "2.6.0"
