Start Methods, Discussion sections

--- a/Project.toml
+++ b/Project.toml
@@ -13,18 +13,22 @@ CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
+Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
 TranscodingStreams = "3bb67fe8-82b1-5028-8e26-92a6c54297fa"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
 
 [compat]
-ArtifactUtils = "0.2.2"
-BioSequences = "3.1.1"
-CodecBzip2 = "0.7.2"
-CodecLz4 = "0.4.0"
-CodecXz = "0.7.0"
-CodecZlib = "0.7.0"
-CodecZstd = "0.7.2"
-DataFrames = "1.4.3"
-FASTX = "2.0.0"
+ArtifactUtils = "= 0.2.2"
+BioSequences = "= 3.1.1"
+CodecBzip2 = "= 0.7.2"
+CodecLz4 = "= 0.4.0"
+CodecXz = "= 0.7.0"
+CodecZlib = "= 0.7.0"
+CodecZstd = "= 0.7.2"
+DataFrames = "= 1.4.3"
+FASTX = "= 2.0.0"
+Pkg = "= 1.8.0"
+RCall = "= 0.13.14"
 TranscodingStreams = "0.9.9"
 VegaLite = "2.6.0"
