--- a/Project.toml
+++ b/Project.toml
@@ -15,6 +15,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
+StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TranscodingStreams = "3bb67fe8-82b1-5028-8e26-92a6c54297fa"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
 
@@ -30,5 +31,6 @@ DataFrames = "= 1.4.3"
 FASTX = "= 2.0.0"
 Pkg = "= 1.8.0"
 RCall = "= 0.13.14"
-TranscodingStreams = "0.9.9"
-VegaLite = "2.6.0"
+StatsBase = "= 0.33.21"
+TranscodingStreams = "= 0.9.9"
+VegaLite = "= 2.6.0"
