--- a/Project.toml
+++ b/Project.toml
@@ -6,31 +6,31 @@ version = "0.1.0"
 [deps]
 ArtifactUtils = "8b73e784-e7d8-4ea5-973d-377fed4e3bce"
 BioSequences = "7e6ae17a-c86d-528c-b3b9-7f778a29fe59"
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 CodecBzip2 = "523fee87-0ab8-5b00-afb7-3ecf72e48cfd"
-CodecLz4 = "5ba52731-8f18-5e0d-9241-30f10d1ec561"
 CodecXz = "ba30903b-d9e8-5048-a5ec-d1f5b0d4b47b"
 CodecZlib = "944b1d66-785c-5afd-91f1-9de20f533193"
 CodecZstd = "6b39b394-51ab-5f42-8807-6242bab2b4c2"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 FASTX = "c2308a5c-f048-11e8-3e8a-31650f418d12"
 Pkg = "44cfe95a-1eb2-52ea-b672-e2afdf69b78f"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 RCall = "6f49c342-dc21-5d91-9882-a32aef131414"
-StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 TranscodingStreams = "3bb67fe8-82b1-5028-8e26-92a6c54297fa"
 VegaLite = "112f6efa-9a02-5b7d-90c0-432ed331239a"
 
 [compat]
 ArtifactUtils = "= 0.2.2"
 BioSequences = "= 3.1.1"
+CSV = "= 0.10.8"
 CodecBzip2 = "= 0.7.2"
-CodecLz4 = "= 0.4.0"
 CodecXz = "= 0.7.0"
 CodecZlib = "= 0.7.0"
 CodecZstd = "= 0.7.2"
 DataFrames = "= 1.4.3"
 FASTX = "= 2.0.0"
 Pkg = "= 1.8.0"
+PlotlyJS = "= 0.18.10"
 RCall = "= 0.13.14"
-StatsBase = "= 0.33.21"
 TranscodingStreams = "= 0.9.9"
 VegaLite = "= 2.6.0"
